<resources>
    <string name="app_name">ZummeJson</string>
    <string name="get_price">получить цены</string>
    <string name="registration_bonus">Бонус</string>
    <string name="messenger_name">Приложение</string>
    <string name="connection_fee">Плата за соединение</string>
    <string name="sms_price">Цена СМС</string>
    <string name="rating">Рейтинг</string>
    <string name="call_price">Цена звонка</string>
    <string name="number_of_comments">Количество коментариев</string>
    <string name="google_store_link">Google Play</string>
    <string name="is_mobile">Мобильный</string>

</resources>
