<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp">

    <android.support.v7.widget.CardView
        android:id="@+id/media_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardElevation="2dp"
        card_view:cardUseCompatPadding="true">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/registration_bonus"
                    android:layout_gravity="center_vertical"
                    android:ellipsize="marquee"
                    android:layout_weight="1"
                    android:freezesText="true"
                    android:inputType="textMultiLine"
                    android:textAppearance="?android:attr/textAppearanceListItemSmall" />

                <TextView
                    android:id="@+id/registration_bonus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:ellipsize="marquee"
                    android:layout_weight="1"
                    android:freezesText="true"
                    android:inputType="textMultiLine"
                    android:textAppearance="?android:attr/textAppearanceListItemSmall" />


            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/messenger_name"
                    android:layout_gravity="center_vertical"
                    android:ellipsize="marquee"
                    android:layout_weight="1"
                    android:freezesText="true"
                    android:inputType="textMultiLine"
                    android:textAppearance="?android:attr/textAppearanceListItemSmall"
                    android:id="@+id/textView" />

                <TextView
                    android:id="@+id/messenger_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:ellipsize="marquee"
                    android:layout_weight="1"
                    android:freezesText="true"
                    android:inputType="textMultiLine"
                    android:textAppearance="?android:attr/textAppearanceListItemSmall" />

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/connection_fee"
                    android:layout_gravity="center_vertical"
                    android:ellipsize="marquee"
                    android:layout_weight="1"
                    android:freezesText="true"
                    android:inputType="textMultiLine"
                    android:textAppearance="?android:attr/textAppearanceListItemSmall" />

                <TextView
                    android:id="@+id/connection_fee"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:ellipsize="marquee"
                    android:layout_weight="1"
                    android:freezesText="true"
                    android:inputType="textMultiLine"
                    android:textAppearance="?android:attr/textAppearanceListItemSmall" />

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sms_price"
                    android:layout_gravity="center_vertical"
                    android:ellipsize="marquee"
                    android:layout_weight="1"
                    android:freezesText="true"
                    android:inputType="textMultiLine"
                    android:textAppearance="?android:attr/textAppearanceListItemSmall" />

                <TextView
                    android:id="@+id/sms_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:ellipsize="marquee"
                    android:layout_weight="1"
                    android:inputType="textMultiLine"
                    android:textAppearance="?android:attr/textAppearanceListItemSmall" />

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rating"
                    android:layout_gravity="center_vertical"
                    android:ellipsize="marquee"
                    android:layout_weight="1"
                    android:freezesText="true"
                    android:inputType="textMultiLine"
                    android:textAppearance="?android:attr/textAppearanceListItemSmall" />

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:ellipsize="marquee"
                    android:layout_weight="1"
                    android:freezesText="true"
                    android:inputType="textMultiLine"
                    android:textAppearance="?android:attr/textAppearanceListItemSmall" />

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/call_price"
                    android:layout_gravity="center_vertical"
                    android:ellipsize="marquee"
                    android:layout_weight="1"
                    android:freezesText="true"
                    android:inputType="textMultiLine"
                    android:textAppearance="?android:attr/textAppearanceListItemSmall" />

                <TextView
                    android:id="@+id/call_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:ellipsize="marquee"
                    android:layout_weight="1"
                    android:freezesText="true"
                    android:inputType="textMultiLine"
                    android:textAppearance="?android:attr/textAppearanceListItemSmall" />

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/number_of_comments"
                    android:layout_gravity="center_vertical"
                    android:ellipsize="marquee"
                    android:layout_weight="1"
                    android:freezesText="true"
                    android:inputType="textMultiLine"
                    android:textAppearance="?android:attr/textAppearanceListItemSmall" />

                <TextView
                    android:id="@+id/number_of_comments"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:ellipsize="marquee"
                    android:layout_weight="1"
                    android:freezesText="true"
                    android:inputType="textMultiLine"
                    android:textAppearance="?android:attr/textAppearanceListItemSmall" />

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/google_store_link"
                    android:layout_gravity="center_vertical"
                    android:ellipsize="marquee"
                    android:layout_weight="1"
                    android:freezesText="true"
                    android:inputType="textMultiLine"
                    android:textAppearance="?android:attr/textAppearanceListItemSmall" />

                <TextView
                    android:id="@+id/google_store_link"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:ellipsize="marquee"
                    android:layout_weight="1"
                    android:freezesText="true"
                    android:autoLink="web"
                    android:inputType="textMultiLine"
                    android:textAppearance="?android:attr/textAppearanceListItemSmall" />

            </TableRow>

        </TableLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>